--- a/README
+++ b/README
@@ -5,3 +5,6 @@ Level 2: PDU (SEQUENCE) (e.g., GetResponse)
 Level 3: VarBindList (SEQUENCE OF) <-- This is parse_varbind_list
 
 Level 4: VarBind (SEQUENCE) <-- This is the inner-most SEQUENCE
+
+
+All tests will be written by Claude
